--- a/html/noriko.html
+++ b/html/noriko.html
@@ -120,8 +120,10 @@
 
 
     <div class="imageSensei">
-        <img
-            src="https://scontent.fsjk1-1.fna.fbcdn.net/v/t31.0-8/p720x720/331182_101915863261029_869742698_o.jpg?_nc_cat=108&_nc_sid=85a577&_nc_eui2=AeH6cmegGc1oEgmAjJ2DcWA4Tj4eR35y1_tOPh5HfnLX-wBL2aLeqMSA0PTz89JTaOUGqvWIZzwgtMywPcOqfwAy&_nc_ohc=Tb4kMc3lYT0AX8mAjVs&_nc_ht=scontent.fsjk1-1.fna&_nc_tp=6&oh=9a6a8cceb4c52a7d1db664dac86518c2&oe=5F4EFBB1">
+        <img src="../images/SENSEI.jpg" style="
+        width:31.5rem;
+        height:31.5rem;
+        " />
     </div>
 
     <div class="why">
@@ -171,8 +173,7 @@
         <h2> Galeria </h2>
 
         <div class="img-wraper">
-            <div style="background-image:url('https://scontent.fsjk1-1.fna.fbcdn.net/v/t31.0-8/p720x720/331182_101915863261029_869742698_o.jpg?_nc_cat=108&_nc_sid=85a577&_nc_eui2=AeH6cmegGc1oEgmAjJ2DcWA4Tj4eR35y1_tOPh5HfnLX-wBL2aLeqMSA0PTz89JTaOUGqvWIZzwgtMywPcOqfwAy&_nc_ohc=Tb4kMc3lYT0AX8mAjVs&_nc_ht=scontent.fsjk1-1.fna&_nc_tp=6&oh=9a6a8cceb4c52a7d1db664dac86518c2&oe=5F4EFBB1');"
-                class="img"></div>
+            <div style="background-image:url('..//images/CEL6.jpg');" class="img"></div>
         </div>
         <!--img-wraper-->
 
