--- a/index.html
+++ b/index.html
@@ -108,48 +108,55 @@
 
             <ul>
 
-                <li>
-                    <a href="../CEL/index.html">
-                        <h2> Home </h2>
-                    </a>
-                    <a href="../CEL/html/sobre.html">
-                        <h2> Sobre </h2>
-                    </a>
-                    <a href="../CEL/html/contato.html">
-                        <h2> Contato </h2>
-                    </a>
-                </li>
+                <div class="first-box">
+                    <li>
+                        <a href="../CEL/index.html">
+                            <h2> Home </h2>
+                        </a>
+                        <a href="../CEL/html/sobre.html">
+                            <h2> Sobre </h2>
+                        </a>
+                        <a href="../CEL/html/contato.html">
+                            <h2> Contato </h2>
+                        </a>
+                    </li>
+                </div><!-- First box -->
 
-                <li>
+                <div class="second-box">
+                    <li>
+                        <p>Cursos</p>
+                        <a href="../CEL/html/ger.html">
+                            <p> Alemão </p>
+                        </a>
+                        <a href="../CEL/html/esp.html">
+                            <p> Espanhol </p>
+                        </a>
+                        <a href="../CEL/html/fra.html">
+                            <P> Francês </P>
+                        </a>
+                        <a href="../CEL/html/ing.html">
+                            <p> Inglês </p>
+                        </a>
+                        <a href="../CEL/html/ita.html">
+                            <p> Italiano </p>
+                        </a>
+                        <a href="../CEL/html/jap.html">
+                            <p> Japonês </p>
+                        </a>
+                    </li>
+                </div><!-- Second-box -->
 
-                    <a href="../CEL/html/ger.html">
-                        <p> Alemão </p>
-                    </a>
-                    <a href="../CEL/html/esp.html">
-                        <p> Espanhol </p>
-                    </a>
-                    <a href="../CEL/html/fra.html">
-                        <P> Francês </P>
-                    </a>
-                    <a href="../CEL/html/ing.html">
-                        <p> Inglês </p>
-                    </a>
-                    <a href="../CEL/html/ita.html">
-                        <p> Italiano </p>
-                    </a>
-                    <a href="../CEL/html/jap.html">
-                        <p> Japonês </p>
-                    </a>
-                </li>
-
-                <li>
-                    <a href="../CEL/html/macedo.html">
-                        <p> Macedo </p>
-                    </a>
-                    <a href="../CEL/html/estevan.html">
-                        <p> Estevam Ferri </p>
-                    </a>
-                </li>
+                <div class="third-box">
+                    <li>
+                        <p>Escolas</p>
+                        <a href="../CEL/html/macedo.html">
+                            <p> Macedo </p>
+                        </a>
+                        <a href="../CEL/html/estevan.html">
+                            <p> Estevam Ferri </p>
+                        </a>
+                    </li>
+                </div><!-- third box -->
 
             </ul>
 
@@ -173,11 +180,7 @@
 
             <section class="galeria">
 
-                <img src="https://scontent.fsjk1-1.fna.fbcdn.net/v/t1.0-9/28166479_415157162269947_5135701802388862933_n.jpg?_nc_cat=101&_nc_sid=05277f&_nc_ohc=oKcqI4Tg6X0AX9nXkfm&_nc_ht=scontent.fsjk1-1.fna&oh=2d6b4ed8391e7529115818b4cd183acb&oe=5F3FAD2A"
-                    class="foto" width="100%" height="400px">
-                <img src="https://scontent.fsjk1-1.fna.fbcdn.net/v/t1.0-9/38814390_513090322476630_6356935254623649792_n.jpg?_nc_cat=103&_nc_sid=8024bb&_nc_ohc=N2qZDVPsEBYAX-qT25v&_nc_ht=scontent.fsjk1-1.fna&oh=e64b221dd599b00c772e37f670d81b5b&oe=5F3ED647"
-                    class="foto" width="100%" height="400px">
-                <img src="https://scontent.fsjk1-1.fna.fbcdn.net/v/t1.0-9/92951434_1120517178289805_426082041621118976_n.jpg?_nc_cat=100&_nc_sid=8024bb&_nc_ohc=95AOnYV50FwAX8hZ_aE&_nc_ht=scontent.fsjk1-1.fna&oh=868554a0edba94329a11de98b099975e&oe=5F3CB1F0"
+                <img src="https://scontent.fsjk1-1.fna.fbcdn.net/v/t1.0-9/131366022_1107312749721048_5781089050531541664_n.jpg?_nc_cat=101&ccb=1-3&_nc_sid=09cbfe&_nc_ohc=6l19wHfo0r0AX8DEvQP&_nc_oc=AQn4Zs1rm8IEmJYpJkiTJrO0PnbAFxwAXbGKvidOEv744FQOjQqIGeRaunU70wy9lgdQmQdv9fypKJuvxgJ6xRhs&_nc_ht=scontent.fsjk1-1.fna&oh=eb2a5ea550853b86d2156708cb0957a0&oe=6070CD14"
                     class="foto" width="100%" height="400px">
 
             </section>
@@ -231,39 +234,33 @@
         <h2> Nossa galeria </h2>
 
         <div class="img-wraper">
-            <div style="background-image:url('https://scontent.fsjk1-1.fna.fbcdn.net/v/t1.0-9/73237561_782143975571262_4525165457027629056_n.jpg?_nc_cat=109&_nc_sid=0be424&_nc_ohc=y-gp1WdJ2nYAX_fsUa8&_nc_ht=scontent.fsjk1-1.fna&oh=9d732a67598b010bffc806983790fba7&oe=5F3D9338');"
-                class="img"></div>
+            <div style="background-image:url('..//CEL/images/CEL1.jpg');" class="img"></div>
         </div>
         <!--img-wraper-->
 
         <div class="img-wraper">
-            <div style="background-image:url('https://scontent.fsjk1-1.fna.fbcdn.net/v/t1.0-9/97297498_937987973320194_1512792742709690368_n.jpg?_nc_cat=111&_nc_sid=110474&_nc_ohc=ypRheYTnnGoAX88gnqK&_nc_ht=scontent.fsjk1-1.fna&oh=9c6ae8640d08917d64a0bb0727e92e57&oe=5F3EB4AB');"
-                class="img"></div>
+            <div style="background-image:url('..//CEL/images/CEL2.jpg');" class="img"></div>
         </div>
         <!--img-wraper-->
 
         <div class="img-wraper">
-            <div style="background-image:url('https://scontent.fsjk1-1.fna.fbcdn.net/v/t1.0-9/43007606_547657812353214_888620736313294848_n.jpg?_nc_cat=100&_nc_sid=110474&_nc_ohc=YQXoeB31_kkAX_Wi1Wu&_nc_ht=scontent.fsjk1-1.fna&oh=082d8d6cc05f3fca6af2a2f4db67b6b3&oe=5F3F0FAD');"
-                class="img"></div>
+            <div style="background-image:url('..//CEL/images/CEL3.jpg');" class="img"></div>
         </div>
         <!--img-wraper-->
 
 
         <div class="img-wraper">
-            <div style="background-image:url('https://scontent.fsjk1-1.fna.fbcdn.net/v/t1.0-9/s960x960/72649611_772348896550770_6449417441083654144_o.jpg?_nc_cat=103&_nc_sid=8024bb&_nc_ohc=5vAgDHHqqscAX-a_2Yn&_nc_ht=scontent.fsjk1-1.fna&_nc_tp=7&oh=50abebda875bccbd7e0567c22ff682fd&oe=5F3DDBD9');"
-                class="img"></div>
+            <div style="background-image:url('..//CEL/images/CEL4.jpg');" class="img"></div>
         </div>
         <!--img-wraper-->
 
         <div class="img-wraper">
-            <div style="background-image:url('https://scontent.fsjk1-1.fna.fbcdn.net/v/t1.0-9/p720x720/73395412_772347946550865_4274829332515389440_o.jpg?_nc_cat=106&_nc_sid=8024bb&_nc_ohc=Wbo86-W7XEcAX_D-LmG&_nc_ht=scontent.fsjk1-1.fna&_nc_tp=6&oh=2f49eeb6832176dd04b6555e959effee&oe=5F410BCC');"
-                class="img"></div>
+            <div style="background-image:url('..//CEL/images/CEL5.jpg');" class="img"></div>
         </div>
         <!--img-wraper-->
 
         <div class="img-wraper">
-            <div style="background-image:url('https://scontent.fsjk1-1.fna.fbcdn.net/v/t1.0-9/38689564_513093189143010_1420748892021981184_n.jpg?_nc_cat=107&_nc_sid=8024bb&_nc_ohc=dMsc0nJL3RcAX-df0dW&_nc_ht=scontent.fsjk1-1.fna&oh=8dd79661ac722edf697198171a108b8b&oe=5F3F5E19');"
-                class="img"></div>
+            <div style="background-image:url('..//CEL/images/CEL6.jpg');" class="img"></div>
         </div>
         <!--img-wraper-->
         <div class="clear"></div>
