--- a/html/noriko.html
+++ b/html/noriko.html
@@ -103,141 +103,207 @@
 
     </section> <!-- header -->
 
-    <section class="middle">
+    <!-- Header mobile -->
 
-        <div class="welcome">
-            <h2> Noriko Sensei </h2>
-            <h3> Uma pequena homenagem para <span> Noriko Adachi </span> lecionando a Língua Japonesa em São José dos
-                Campos!</h3>
-            <p> Fica aqui nossos gestos de amor e carinho por uma professora que esteve sempre a fazer o tudo que
-                estivesse ao seu alcance para
-                nos proporcionar aulas e experiências que serão lembradas para toda a vida. <br>
-                Muito obrigado por tudo Sensei!<br>
-                ありがとう ございました
-            </p>
-        </div>
-    </section>
+    <div class="headerContainer">
+        <header class="header-mobile">
+
+            <ul>
+
+                <div class="first-box">
+                    <li>
+                        <a href="../CEL/index.html">
+                            <h2> Home </h2>
+                        </a>
+                        <a href="../CEL/html/sobre.html">
+                            <h2> Sobre </h2>
+                        </a>
+                        <a href="../CEL/html/contato.html">
+                            <h2> Contato </h2>
+                        </a>
+                    </li>
+                </div><!-- First box -->
+
+                <div class="second-box">
+                    <li>
+                        <p>Cursos</p>
+                        <a href="../CEL/html/ger.html">
+                            <p> Alemão </p>
+                        </a>
+                        <a href="../CEL/html/esp.html">
+                            <p> Espanhol </p>
+                        </a>
+                        <a href="../CEL/html/fra.html">
+                            <P> Francês </P>
+                        </a>
+                        <a href="../CEL/html/ing.html">
+                            <p> Inglês </p>
+                        </a>
+                        <a href="../CEL/html/ita.html">
+                            <p> Italiano </p>
+                        </a>
+                        <a href="../CEL/html/jap.html">
+                            <p> Japonês </p>
+                        </a>
+                    </li>
+                </div><!-- Second-box -->
+
+                <div class="third-box">
+                    <li>
+                        <p>Escolas</p>
+                        <a href="../CEL/html/macedo.html">
+                            <p> Macedo </p>
+                        </a>
+                        <a href="../CEL/html/estevan.html">
+                            <p> Estevam Ferri </p>
+                        </a>
+                    </li>
+                </div><!-- third box -->
+
+            </ul>
+
+        </header><!-- header-mobile -->
+
+        <section class="middle">
+
+            <div class="welcome">
+                <h2> Noriko Sensei </h2>
+                <h3> Uma pequena homenagem para <span> Noriko Adachi </span> lecionando a Língua Japonesa em São José
+                    dos
+                    Campos!</h3>
+                <p> Fica aqui nossos gestos de amor e carinho por uma professora que esteve sempre a fazer o tudo que
+                    estivesse ao seu alcance para
+                    nos proporcionar aulas e experiências que serão lembradas para toda a vida. <br>
+                    Muito obrigado por tudo Sensei!<br>
+                    ありがとう ございました
+                </p>
+            </div>
+        </section>
 
 
-    <div class="imageSensei">
-        <img src="../images/SENSEI.jpg" style="
+        <div class="imageSensei">
+            <img src="../images/SENSEI.jpg" style="
         width:31.5rem;
         height:31.5rem;
         " />
-    </div>
+        </div>
 
-    <div class="why">
+        <div class="why">
 
-        <div class="why2">
-            <div class="ling">
-                <h2> Respeito, Paciência e Amor </h2>
+            <div class="why2">
+                <div class="ling">
+                    <h2> Respeito, Paciência e Amor </h2>
+                </div>
+
+                <h3> Humildade </h3>
+                <p> Sempre à par de o'que ocorria com seus alunos, nunca julgou e sim sempre estende sua mão em <br>
+                    busca
+                    de saber o'que se passa para poder ajudar.<br>
+                    Nunca deixou de se disponibilizar para auxiliar. </p>
+                <br><br>
+
+                <i class='far fa-heart' style='font-size:36px'></i>
+
+                <h3> Bom humor e felicidade </h3>
+                <p> Com muitos anos de experiência em sala de aula, possui um carísma contagiante, sempre recebendo e
+                    <br>
+                    cumprimentando seus alunos e qualquer um que venha visitar sua classe. Com respeito e promovendo
+                    interação entre todos <br>
+                    à sua volta, é uma grande conciliadora de muitas situações em que possa ajudar. </p>
+
+
+                <i class='far fa-heart' style='font-size:36px'></i>
+
+                <h3> Sabedoria, conselhos e boas histórias </h3>
+                <p>
+                    Sem dúvida nossa amada Sensei é a pessoa certa para você ir conseguir conselhos nos momentos
+                    difíceis e
+                    de dúvidas. <br>
+                    As viagens para Campos do Jordão no Festival das Cerejeiras são repletas conhecimento sobre
+                    Geografia e
+                    História e ainda muita conversa em japonês hehe.<br>
+                    Teremos sempre você Sensei em nossos corações e mentes!
+
+                </p>
+
             </div>
 
-            <h3> Humildade </h3>
-            <p> Sempre à par de o'que ocorria com seus alunos, nunca julgou e sim sempre estende sua mão em <br> busca
-                de saber o'que se passa para poder ajudar.<br>
-                Nunca deixou de se disponibilizar para auxiliar. </p>
-            <br><br>
-
-            <i class='far fa-heart' style='font-size:36px'></i>
-
-            <h3> Bom humor e felicidade </h3>
-            <p> Com muitos anos de experiência em sala de aula, possui um carísma contagiante, sempre recebendo e <br>
-                cumprimentando seus alunos e qualquer um que venha visitar sua classe. Com respeito e promovendo
-                interação entre todos <br>
-                à sua volta, é uma grande conciliadora de muitas situações em que possa ajudar. </p>
-
-
-            <i class='far fa-heart' style='font-size:36px'></i>
-
-            <h3> Sabedoria, conselhos e boas histórias </h3>
-            <p>
-                Sem dúvida nossa amada Sensei é a pessoa certa para você ir conseguir conselhos nos momentos difíceis e
-                de dúvidas. <br>
-                As viagens para Campos do Jordão no Festival das Cerejeiras são repletas conhecimento sobre Geografia e
-                História e ainda muita conversa em japonês hehe.<br>
-                Teremos sempre você Sensei em nossos corações e mentes!
-
-            </p>
-
         </div>
-
-    </div>
-
-    <div class="clear"></div>
-
-    <!-- GALERIA CEL -->
-
-    <div class="container-img">
-
-        <h2> Galeria </h2>
-
-        <div class="img-wraper">
-            <div style="background-image:url('..//images/CEL6.jpg');" class="img"></div>
-        </div>
-        <!--img-wraper-->
-
-        <div class="img-wraper">
-            <div style="background-image:url('../images/sensei1.jpg');" class="img"></div>
-        </div>
-        <!--img-wraper-->
-
-        <div class="img-wraper">
-            <div style="background-image:url('../images/sensei2.jpg');" class="img"></div>
-        </div>
-        <!--img-wraper-->
-
-
-        <div class="img-wraper">
-            <div style="background-image:url('../images/sensei3.jpg');" class="img"></div>
-        </div>
-        <!--img-wraper-->
-
-        <div class="img-wraper">
-            <div style="background-image:url('../images/sensei4.jpg');" class="img"></div>
-        </div>
-        <!--img-wraper-->
-
-        <div class="img-wraper">
-            <div style="background-image:url('../images/sensei5.jpg');" class="img"></div>
-        </div>
-        <!--img-wraper-->
-        <div class="clear"></div>
-    </div>
-    <!--container-->
-
-
-    <div class="logoSP">
-        <div><img src="../images/governo-do-estado-de-sao-paulo-sp-logo.png" alt="Governo de São Paulo"></div>
-    </div>
-
-    <!-- BOTTOM BAR -->
-
-    <section class="bar">
-
-        <h3> Desenvolvido com <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart" fill="currentColor"
-                xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd"
-                    d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z" />
-            </svg>
-
-            por <span><a href="https://www.linkedin.com/in/alec-duwe-dos-santos-a05011193/" target="_blank">Alec
-                    Duwe</a></span></h3>
-
-        <p> São José dos Campos- SP / Brasil</p>
-
-        <a href="https://www.facebook.com/cel.macedo.5"><img
-                src="https://image.flaticon.com/icons/png/512/124/124010.png" width="40px" height="40px" />
-            <a class="sensei" href="#">
-                <h4>のりこ 先生</h4>
-            </a></a>
-        <a href="https://www.facebook.com/Centroestudodelinguas"><img
-                src="https://image.flaticon.com/icons/png/512/124/124010.png" width="40px" height="40px" /></a>
-
 
         <div class="clear"></div>
 
-    </section>
+        <!-- GALERIA CEL -->
+
+        <div class="container-img">
+
+            <h2> Galeria </h2>
+
+            <div class="img-wraper">
+                <div style="background-image:url('..//images/CEL6.jpg');" class="img"></div>
+            </div>
+            <!--img-wraper-->
+
+            <div class="img-wraper">
+                <div style="background-image:url('../images/sensei1.jpg');" class="img"></div>
+            </div>
+            <!--img-wraper-->
+
+            <div class="img-wraper">
+                <div style="background-image:url('../images/sensei2.jpg');" class="img"></div>
+            </div>
+            <!--img-wraper-->
+
+
+            <div class="img-wraper">
+                <div style="background-image:url('../images/sensei3.jpg');" class="img"></div>
+            </div>
+            <!--img-wraper-->
+
+            <div class="img-wraper">
+                <div style="background-image:url('../images/sensei4.jpg');" class="img"></div>
+            </div>
+            <!--img-wraper-->
+
+            <div class="img-wraper">
+                <div style="background-image:url('../images/sensei5.jpg');" class="img"></div>
+            </div>
+            <!--img-wraper-->
+            <div class="clear"></div>
+        </div>
+        <!--container-->
+
+
+        <div class="logoSP">
+            <div><img src="../images/governo-do-estado-de-sao-paulo-sp-logo.png" alt="Governo de São Paulo"></div>
+        </div>
+
+        <!-- BOTTOM BAR -->
+
+        <section class="bar">
+
+            <h3> Desenvolvido com <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart"
+                    fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd"
+                        d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z" />
+                </svg>
+
+                por <span><a href="https://www.linkedin.com/in/alec-duwe-dos-santos-a05011193/" target="_blank">Alec
+                        Duwe</a></span></h3>
+
+            <p> São José dos Campos- SP / Brasil</p>
+
+            <a href="https://www.facebook.com/cel.macedo.5"><img
+                    src="https://image.flaticon.com/icons/png/512/124/124010.png" width="40px" height="40px" />
+                <a class="sensei" href="#">
+                    <h4>のりこ 先生</h4>
+                </a></a>
+            <a href="https://www.facebook.com/Centroestudodelinguas"><img
+                    src="https://image.flaticon.com/icons/png/512/124/124010.png" width="40px" height="40px" /></a>
+
+
+            <div class="clear"></div>
+
+        </section>
 
 </body>
 
