--- a/html/sobre.html
+++ b/html/sobre.html
@@ -95,79 +95,143 @@
 
     </section> <!-- header -->
 
-    <section class="middle">
+    <!-- Header mobile -->
 
-        <div class="welcome">
-            <h2> Sobre o CEL </h2>
+    <div class="headerContainer">
+        <header class="header-mobile">
+
+            <ul>
+
+                <div class="first-box">
+                    <li>
+                        <a href="../CEL/index.html">
+                            <h2> Home </h2>
+                        </a>
+                        <a href="../CEL/html/sobre.html">
+                            <h2> Sobre </h2>
+                        </a>
+                        <a href="../CEL/html/contato.html">
+                            <h2> Contato </h2>
+                        </a>
+                    </li>
+                </div><!-- First box -->
+
+                <div class="second-box">
+                    <li>
+                        <p>Cursos</p>
+                        <a href="../CEL/html/ger.html">
+                            <p> Alemão </p>
+                        </a>
+                        <a href="../CEL/html/esp.html">
+                            <p> Espanhol </p>
+                        </a>
+                        <a href="../CEL/html/fra.html">
+                            <P> Francês </P>
+                        </a>
+                        <a href="../CEL/html/ing.html">
+                            <p> Inglês </p>
+                        </a>
+                        <a href="../CEL/html/ita.html">
+                            <p> Italiano </p>
+                        </a>
+                        <a href="../CEL/html/jap.html">
+                            <p> Japonês </p>
+                        </a>
+                    </li>
+                </div><!-- Second-box -->
+
+                <div class="third-box">
+                    <li>
+                        <p>Escolas</p>
+                        <a href="../CEL/html/macedo.html">
+                            <p> Macedo </p>
+                        </a>
+                        <a href="../CEL/html/estevan.html">
+                            <p> Estevam Ferri </p>
+                        </a>
+                    </li>
+                </div><!-- third box -->
+
+            </ul>
+
+        </header><!-- header-mobile -->
+
+        <section class="middle">
+
+            <div class="welcome">
+                <h2> Sobre o CEL </h2>
 
 
-        </div>
+            </div>
 
 
-        <div class="why">
+            <div class="why">
 
-            <div class="why2">
-                <div class="ling">
-                    <h2> </h2>
-                </div>
+                <div class="why2">
+                    <div class="ling">
+                        <h2> </h2>
+                    </div>
 
-                <h3> No geral </h3>
-                <p> Oferecer aos alunos matriculados em escolas da rede estadual a oportunidade de aprender novos
-                    idiomas é o objetivo do Centro de Estudo de Línguas (CEL). Em todo o Estado de São Paulo, mais de
-                    200 unidades disponibilizam cursos de inglês, espanhol, francês, alemão, italiano, mandarim e
-                    japonês, conforme a demanda de cada região.
+                    <h3> No geral </h3>
+                    <p> Oferecer aos alunos matriculados em escolas da rede estadual a oportunidade de aprender novos
+                        idiomas é o objetivo do Centro de Estudo de Línguas (CEL). Em todo o Estado de São Paulo, mais
+                        de
+                        200 unidades disponibilizam cursos de inglês, espanhol, francês, alemão, italiano, mandarim e
+                        japonês, conforme a demanda de cada região.
 
-                    Além do estudo da língua estrangeira, os estudantes ampliam sua formação cultural, explorando nas
-                    aulas os costumes de outros países. A oferta dos cursos atende uma necessidade do mercado de
-                    trabalho, aumentando as chances de inserção profissional para os alunos.
+                        Além do estudo da língua estrangeira, os estudantes ampliam sua formação cultural, explorando
+                        nas
+                        aulas os costumes de outros países. A oferta dos cursos atende uma necessidade do mercado de
+                        trabalho, aumentando as chances de inserção profissional para os alunos.
 
-                    Podem se inscrever alunos do Ensino Fundamental, Ensino Médio ou Educação de Jovens e Adultos (EJA).
-                </p>
-
-
-                <h3> Ensino Gratuito </h3>
-                <p> <span> TODOS </span> os cursos de idiomas oferecidos pelo Centro de Ensino de Línguas <br>
-                    são totalmente gratuitos. Os alunos contam com apoio total dos professores e estudam <br>
-                    com bons materiais sem pagar nada. </p>
+                        Podem se inscrever alunos do Ensino Fundamental, Ensino Médio ou Educação de Jovens e Adultos
+                        (EJA).
+                    </p>
 
 
-                <!--
+                    <h3> Ensino Gratuito </h3>
+                    <p> <span> TODOS </span> os cursos de idiomas oferecidos pelo Centro de Ensino de Línguas <br>
+                        são totalmente gratuitos. Os alunos contam com apoio total dos professores e estudam <br>
+                        com bons materiais sem pagar nada. </p>
+
+
+                    <!--
             <h3> Um pouco da história do CEL em São José dos Campos </h3>
             <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam scelerisque luctus leo, id egestas orci tincidunt id. In vulputate condimentum mi vitae hendrerit. Donec sed viverra diam, nec aliquet lacus. In a condimentum metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Praesent auctor lacus nec ex pharetra, non tristique enim cursus. Aenean nec dictum neque. Aliquam tristique ante non elit rhoncus, et interdum velit fringilla. Aenean tincidunt tortor id justo lobortis pretium in et ligula. Vivamus venenatis ex quis fringilla pretium. </p>
             -->
 
+                </div>
+
             </div>
-
-        </div>
-        <div class="clear"></div>
-
-        <div class="logoSP">
-            <div><img src="../images/governo-do-estado-de-sao-paulo-sp-logo.png" alt="Governo de São Paulo"></div>
-        </div>
-
-        <!-- BOTTOM BAR -->
-
-        <section class="bar">
-
-            <h3> Desenvolvido com <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart"
-                    fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd"
-                        d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z" />
-                </svg>
-
-                por <span><a href="https://www.linkedin.com/in/alec-duwe-dos-santos-a05011193/" target="_blank">Alec
-                        Duwe</a></span></h3>
-
-            <p> São José dos Campos- SP / Brasil</p>
-
-            <a href="https://www.facebook.com/cel.macedo.5"><img
-                    src="https://image.flaticon.com/icons/png/512/124/124010.png" width="40px" height="40px" /></a>
-            <a href="https://www.facebook.com/Centroestudodelinguas"><img
-                    src="https://image.flaticon.com/icons/png/512/124/124010.png" width="40px" height="40px" /></a>
-
             <div class="clear"></div>
 
-        </section>
+            <div class="logoSP">
+                <div><img src="../images/governo-do-estado-de-sao-paulo-sp-logo.png" alt="Governo de São Paulo"></div>
+            </div>
+
+            <!-- BOTTOM BAR -->
+
+            <section class="bar">
+
+                <h3> Desenvolvido com <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart"
+                        fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd"
+                            d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z" />
+                    </svg>
+
+                    por <span><a href="https://www.linkedin.com/in/alec-duwe-dos-santos-a05011193/" target="_blank">Alec
+                            Duwe</a></span></h3>
+
+                <p> São José dos Campos- SP / Brasil</p>
+
+                <a href="https://www.facebook.com/cel.macedo.5"><img
+                        src="https://image.flaticon.com/icons/png/512/124/124010.png" width="40px" height="40px" /></a>
+                <a href="https://www.facebook.com/Centroestudodelinguas"><img
+                        src="https://image.flaticon.com/icons/png/512/124/124010.png" width="40px" height="40px" /></a>
+
+                <div class="clear"></div>
+
+            </section>
 
 
 </body>
