--- a/html/sobre.html
+++ b/html/sobre.html
@@ -88,7 +88,7 @@
                 <div><a href="../html/macedo.html"></a>
                     <p> Macedo </p></a>
                 </div>
-                <div><a href="../CEL/html/estevan.html"></a>
+                <div><a href="../html/estevan.html"></a>
                     <p> Estevam Ferri </p></a>
                 </div>
             </div>
@@ -104,13 +104,13 @@
 
                 <div class="first-box">
                     <li>
-                        <a href="../CEL/index.html">
+                        <a href="../index.html">
                             <h2> Home </h2>
                         </a>
-                        <a href="../CEL/html/sobre.html">
+                        <a href="../html/sobre.html">
                             <h2> Sobre </h2>
                         </a>
-                        <a href="../CEL/html/contato.html">
+                        <a href="../html/contato.html">
                             <h2> Contato </h2>
                         </a>
                     </li>
