--- a/html/esp.html
+++ b/html/esp.html
@@ -100,6 +100,7 @@
     <!-- Header mobile -->
 
     <div class="headerContainer">
+
         <header class="header-mobile">
 
             <ul>
@@ -109,7 +110,7 @@
                         <a href="../index.html">
                             <h2> Home </h2>
                         </a>
-                        <a href="..html/sobre.html">
+                        <a href="../html/sobre.html">
                             <h2> Sobre </h2>
                         </a>
                         <a href="../html/contato.html">
@@ -121,22 +122,22 @@
                 <div class="second-box">
                     <li>
                         <p>Cursos</p>
-                        <a href="../CEL/html/ger.html">
+                        <a href="../html/ger.html">
                             <p> Alemão </p>
                         </a>
-                        <a href="../CEL/html/esp.html">
+                        <a href="../html/esp.html">
                             <p> Espanhol </p>
                         </a>
-                        <a href="../CEL/html/fra.html">
+                        <a href="../html/fra.html">
                             <P> Francês </P>
                         </a>
-                        <a href="../CEL/html/ing.html">
+                        <a href="..html/ing.html">
                             <p> Inglês </p>
                         </a>
-                        <a href="../CEL/html/ita.html">
+                        <a href="../html/ita.html">
                             <p> Italiano </p>
                         </a>
-                        <a href="../CEL/html/jap.html">
+                        <a href="../html/jap.html">
                             <p> Japonês </p>
                         </a>
                     </li>
@@ -145,10 +146,10 @@
                 <div class="third-box">
                     <li>
                         <p>Escolas</p>
-                        <a href="../CEL/html/macedo.html">
+                        <a href="../html/macedo.html">
                             <p> Macedo </p>
                         </a>
-                        <a href="../CEL/html/estevan.html">
+                        <a href="../html/estevan.html">
                             <p> Estevam Ferri </p>
                         </a>
                     </li>
