--- a/html/macedo.html
+++ b/html/macedo.html
@@ -107,7 +107,7 @@
                         <a href="../index.html">
                             <h2> Home </h2>
                         </a>
-                        <a href="../CEL/html/sobre.html">
+                        <a href="../html/sobre.html">
                             <h2> Sobre </h2>
                         </a>
                         <a href="../html/contato.html">
