--- a/html/noriko.html
+++ b/html/noriko.html
@@ -53,10 +53,10 @@
         <div><a href="../index.html">
                 <h2> Home </h2>
             </a></div>
-        <div><a href="../CEL/html/sobre.html">
+        <div><a href="../html/sobre.html">
                 <h2> Sobre </h2>
             </a></div>
-        <div><a href="../CEL/html/contato.html">
+        <div><a href="../html/contato.html">
                 <h2> Contato </h2>
             </a></div>
 
@@ -66,22 +66,22 @@
                 <h2> Cursos </h2>
             </div>
             <div class="dropdown-content">
-                <div class="ale"><a href="../CEL/html/ger.html">
+                <div class="ale"><a href="../html/ger.html">
                         <p> Alemão </p>
                     </a></div>
-                <div class="esp"><a href="../CEL/html/esp.html">
+                <div class="esp"><a href="../html/esp.html">
                         <p> Espanhol </p>
                     </a></div>
-                <div class="fra"><a href="../CEL/html/fra.html">
+                <div class="fra"><a href="../html/fra.html">
                         <P> Francês </P>
                     </a></div>
-                <div class="ing"><a href="../CEL/html/ing.html">
+                <div class="ing"><a href="../html/ing.html">
                         <p> Inglês </p>
                     </a></div>
-                <div class="ita"><a href="../CEL/html/ita.html">
+                <div class="ita"><a href="../html/ita.html">
                         <p> Italiano </p>
                     </a></div>
-                <div class="jap"><a href="../CEL/html/jap.html">
+                <div class="jap"><a href="../html/jap.html">
                         <p> Japonês </p>
                     </a></div>
             </div>
@@ -93,10 +93,10 @@
                 <h2> Escolas </h2>
             </div>
             <div class="dropdown-content">
-                <div><a href="../CEL/html/macedo.html">
+                <div><a href="../html/macedo.html">
                         <p> Macedo </p>
                     </a></div>
-                <div><a href="../CEL/html/estevan.html">
+                <div><a href="../html/estevan.html">
                         <p> Estevam Ferri </p>
                     </a></div>
             </div>
@@ -112,13 +112,13 @@
 
                 <div class="first-box">
                     <li>
-                        <a href="../CEL/index.html">
+                        <a href="../index.html">
                             <h2> Home </h2>
                         </a>
-                        <a href="../CEL/html/sobre.html">
+                        <a href="../html/sobre.html">
                             <h2> Sobre </h2>
                         </a>
-                        <a href="../CEL/html/contato.html">
+                        <a href="../html/contato.html">
                             <h2> Contato </h2>
                         </a>
                     </li>
@@ -127,22 +127,22 @@
                 <div class="second-box">
                     <li>
                         <p>Cursos</p>
-                        <a href="../CEL/html/ger.html">
+                        <a href="../html/ger.html">
                             <p> Alemão </p>
                         </a>
-                        <a href="../CEL/html/esp.html">
+                        <a href="../html/esp.html">
                             <p> Espanhol </p>
                         </a>
-                        <a href="../CEL/html/fra.html">
+                        <a href="../html/fra.html">
                             <P> Francês </P>
                         </a>
-                        <a href="../CEL/html/ing.html">
+                        <a href="../html/ing.html">
                             <p> Inglês </p>
                         </a>
-                        <a href="../CEL/html/ita.html">
+                        <a href="../html/ita.html">
                             <p> Italiano </p>
                         </a>
-                        <a href="../CEL/html/jap.html">
+                        <a href="../html/jap.html">
                             <p> Japonês </p>
                         </a>
                     </li>
@@ -151,10 +151,10 @@
                 <div class="third-box">
                     <li>
                         <p>Escolas</p>
-                        <a href="../CEL/html/macedo.html">
+                        <a href="../html/macedo.html">
                             <p> Macedo </p>
                         </a>
-                        <a href="../CEL/html/estevan.html">
+                        <a href="../html/estevan.html">
                             <p> Estevam Ferri </p>
                         </a>
                     </li>
@@ -209,7 +209,8 @@
                     <br>
                     cumprimentando seus alunos e qualquer um que venha visitar sua classe. Com respeito e promovendo
                     interação entre todos <br>
-                    à sua volta, é uma grande conciliadora de muitas situações em que possa ajudar. </p>
+                    à sua volta, é uma grande conciliadora de muitas situações em que possa ajudar.
+                </p>
 
 
                 <i class='far fa-heart' style='font-size:36px'></i>
