--- a/html/fra.html
+++ b/html/fra.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
     <!-- CSS -->
-    <link href="../CSS/fra.css" type="text/css" rel="stylesheet" />
+    <link href="../css/fra.css" type="text/css" rel="stylesheet" />
 
     <!-- FONTS -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
