--- a/html/esp.html
+++ b/html/esp.html
@@ -11,7 +11,7 @@
 
 
     <!-- CSS -->
-    <link href="../CSS/esp.css" type="text/css" rel="stylesheet" />
+    <link href="../css/esp.css" type="text/css" rel="stylesheet" />
 
     <!-- FONTS -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
