--- a/index.html
+++ b/index.html
@@ -234,33 +234,33 @@
         <h2> Nossa galeria </h2>
 
         <div class="img-wraper">
-            <div style="background-image:url('..//CEL/images/CEL1.jpg');" class="img"></div>
+            <div style="background-image:url('../images/CEL1.jpg');" class="img"></div>
         </div>
         <!--img-wraper-->
 
         <div class="img-wraper">
-            <div style="background-image:url('..//CEL/images/CEL2.jpg');" class="img"></div>
+            <div style="background-image:url('../images/CEL2.jpg');" class="img"></div>
         </div>
         <!--img-wraper-->
 
         <div class="img-wraper">
-            <div style="background-image:url('..//CEL/images/CEL3.jpg');" class="img"></div>
+            <div style="background-image:url('../images/CEL3.jpg');" class="img"></div>
         </div>
         <!--img-wraper-->
 
 
         <div class="img-wraper">
-            <div style="background-image:url('..//CEL/images/CEL4.jpg');" class="img"></div>
+            <div style="background-image:url('..images/CEL4.jpg');" class="img"></div>
         </div>
         <!--img-wraper-->
 
         <div class="img-wraper">
-            <div style="background-image:url('..//CEL/images/CEL5.jpg');" class="img"></div>
+            <div style="background-image:url('..images/CEL5.jpg');" class="img"></div>
         </div>
         <!--img-wraper-->
 
         <div class="img-wraper">
-            <div style="background-image:url('..//CEL/images/CEL6.jpg');" class="img"></div>
+            <div style="background-image:url('../images/CEL6.jpg');" class="img"></div>
         </div>
         <!--img-wraper-->
         <div class="clear"></div>
